# Yadro-cpp-test-2

./: CMakeLists.txt  README.md  a.out  ans.txt  application.hpp  client.hpp  computer_club.hpp  computer_club_manager.hpp  event.hpp  event_body.hpp  event_parser.hpp  forgdb  input_parser.hpp  main.cpp  output_writer.hpp  table.hpp  test.txt  test2.txt  time24.hpp  uml.dot
include/: application.hpp  client.hpp  computer_club.hpp  computer_club_manager.hpp  event.hpp  event_body.hpp  event_parser.hpp  exception.hpp  input_parser.hpp  output_writer.hpp  table.hpp  time24.hpp
src/: application.cpp  client.cpp  computer_club.cpp  computer_club_manager.cpp  event.cpp  event_body.cpp  event_parser.cpp  exception.cpp  input_parser.cpp  main.cpp  output_writer.cpp  table.cpp  time24.cpp
test/: CMakeLists.txt  test.cpp
test/answers/: ans_10.txt  ans_11.txt  ans_2.txt  ans_3.txt  ans_4.txt  ans_5.txt  ans_6.txt  ans_7.txt  ans_8.txt  ans_9.txt
test/tests/: test_10.txt  test_11.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
tmp/: a.out  tmp.cpp
